--- a/frontend/src/styles/scss/pages/_positions.scss
+++ b/frontend/src/styles/scss/pages/_positions.scss
@@ -7,7 +7,12 @@
 
 .positions-page {
   min-height: 100vh;
-  background-color: $gray-50;
+  background-color: $gray-900;
+  margin-left: 280px; // Account for fixed sidebar width
+
+  @media (max-width: 1024px) {
+    margin-left: 0; // Remove margin on mobile when sidebar is hidden
+  }
 
   &__container {
     @extend .container;
@@ -19,14 +24,14 @@
     @include flex-between;
     margin-bottom: $space-6;
     padding: $space-4 $space-6;
-    background-color: $white;
+    background-color: $gray-800;
     border-radius: $radius-lg;
     box-shadow: $shadow-sm;
 
     .header-title {
       font-size: $font-2xl;
       font-weight: $font-bold;
-      color: $gray-900;
+      color: $white;
       margin: 0;
     }
 
